--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://my-blog.wbangx2.workers.dev/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "PaperMod"
